# pygame-chrome-dino

./: README.md  pyproject.toml
src/: __main__.py
src/dinogame/: __init__.py  __main__.py  cactus.py  constants.py  dino.py  ground.py  message.py  score.py  speed_manager.py  sprite.py
