[project]
name = "dinogame"
version = "0.1.0"
description = "Clone of Chrome's Dino Game in Pygame"
authors = [
    { name = "pan93412", email = "pan93412@gmail.com" }
]
dependencies = [
    "pygame>=2.5.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true
